--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ hr {
 }
 
 h1 {
-  font-size: 562.5%;
+  font-size: 4.50rem;
   margin: 50px auto 0 auto;
   font-family: 'Major Mono Display', monospace;
   color: #231955;
